Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44208

"D3D11 CORRUPTION" with threaded offscreen rendering

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0
    • 5.4.0
    • GUI: OpenGL
    • None
    • MSVC 2013, Windows 7, 64-bit build

    Description

      When issueing OpenGL commands in a secondary thread into a QOffscreenSUrface (created in the main thread), the following exception is issued:

      D3D11 CORRUPTION: ID3D11DeviceContext::ClearRenderTargetView:

      Two threads were found to be executing functions associated with the same Device[Context] at the same time. This will cause corruption of memory. Appropriate thread synchronization needs to occur external to the Direct3D API (or through the ID3D10Multithread interface).

      4244 and 7648 are the implicated thread ids. [ MISCELLANEOUS CORRUPTION #28: CORRUPTED_MULTITHREADING]
      First-chance exception at ....

      Attached is the OpenGLWindow example with the necessary additions to reproduce the problem.
      This only happens if ANGLE is forced via app.setAttribute(Qt::AA_UseOpenGLES).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            jorgediogo Jorge Diogo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes